# stm32f746g-disco

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  NOTICE  README.md  mkdocs.yml  requirements.txt
.claude/: settings.json
.claude/skills/codex-debug/: SKILL.md
.claude/skills/codex-review/: SKILL.md
.github/workflows/: deploy.yml
cmake/: arm-none-eabi-toolchain.cmake  cli_version.h.in  gen_model_array.py  tflite-micro.cmake
design/: shell-requirements.md
docs/en/: index.md
docs/en/ai/: inference.md
docs/en/architecture/: frame-pipeline.md  layering.md  ownership.md
docs/en/hardware/: board.md  camera.md  display.md  qspi-flash.md  sdmmc.md  sdram.md  touch.md
docs/en/network/: ethernet.md  netxduo.md
docs/en/rtos/: filesystem.md  guix.md  iwdg.md  logging.md  shell-app.md  shell-architecture.md  shell-backend-uart.md  shell-builtins.md  shell-completion.md  shell-core.md  shell-coremark.md  shell-devmem.md  shell-editing.md  shell-free.md  shell-fs.md  shell-jobs.md  shell-membench.md  shell-output.md  shell-parser.md  shell-registration.md  shell-requirements.md  shell-sleep-watch.md  shell-testing.md  shell-thread.md  shell-xfer.md  threadx.md
docs/ja/: index.md
docs/ja/ai/: inference.md
docs/ja/architecture/: frame-pipeline.md  layering.md  ownership.md
docs/ja/hardware/: board.md  camera.md  display.md  qspi-flash.md  sdmmc.md  sdram.md  touch.md
docs/ja/network/: ethernet.md  netxduo.md
docs/ja/rtos/: filesystem.md  guix.md  iwdg.md  logging.md  shell-app.md  shell-architecture.md  shell-backend-uart.md  shell-builtins.md  shell-completion.md  shell-core.md  shell-coremark.md  shell-devmem.md  shell-editing.md  shell-free.md  shell-fs.md  shell-jobs.md  shell-membench.md  shell-output.md  shell-parser.md  shell-registration.md  shell-sleep-watch.md  shell-testing.md  shell-thread.md  shell-xfer.md  threadx.md
include/: bsp.h  iwdg.h  log.h  main.h  stm32f7xx_it.h
ldscript/: STM32F746NGHx_FLASH.ld
port/camera/: camera.c  camera.h
port/coremark/: core_portme.c  core_portme.h
port/eth/: eth_link.c  eth_link.h  eth_phy.c  eth_phy.h
port/filex/: fs_glue.c  fs_glue.h  fx_lx_nor_driver.c  fx_lx_nor_driver.h  fx_sd_driver.c  fx_sd_driver.h  fx_user.h  sd_fs_glue.c  sd_fs_glue.h
port/guix/: guix_app.c  guix_app.h  guix_camera.c  guix_camera.h  guix_display.c  guix_display.h  guix_glue.c  guix_glue.h  guix_touch.c  guix_touch.h  gx_user.h
port/levelx/: lx_nor_qspi_driver.c  lx_nor_qspi_driver.h  lx_user.h
port/ltdc/: ltdc_display.c  ltdc_display.h
port/netxduo/: nx_echo.c  nx_echo.h  nx_eth_driver.c  nx_eth_driver.h  nx_glue.c  nx_glue.h  nx_mjpeg.c  nx_mjpeg.h  nx_shell.c  nx_shell.h  nx_user.h
port/nn/: nn.c  nn.h  nn_backend.h  nn_camera.c  nn_camera.h  nn_null.c  nn_stedgeai.c  nn_stedgeai_reloc.c
port/nn/models/: blazeface.c  blazeface.h
port/nn/tflm/: cxx_runtime.cc  nn_tflm.cc  tflm_spike.cc
port/qspi/: qspi_flash.c  qspi_flash.h
port/sd/: sd_card.c  sd_card.h
port/sdram/: sdram.c  sdram.h
port/threadx/: tm_svc.c  tx_glue.c  tx_user.h
port/touch/: touch.c  touch.h
scripts/: gen-reloc-model.sh  rgb565_to_png.py  y8_to_png.py  yuv422_to_png.py
shell/backend/: cli_backend_dummy.c  cli_backend_uart.c  cli_backend_uart.h
shell/cmds/: cmd_ai.c  cmd_builtin.c  cmd_camera.c  cmd_coremark.c  cmd_crash.c  cmd_devmem.c  cmd_dmesg.c  cmd_free.c  cmd_fs.c  cmd_gui.c  cmd_lcd.c  cmd_membench.c  cmd_net.c  cmd_qspi.c  cmd_sd.c  cmd_sdram.c  cmd_sleep.c  cmd_system.c  cmd_thread.c  cmd_touch.c  cmd_wdt.c  cmd_xfer.c  cmd_xfer.h  fs_cmd_core.c  fs_cmd_core.h
shell/core/: cli_core.c  cli_edit.c  cli_fmt.c  cli_history.c  cli_internal.h  cli_parse.c  cli_printf.c  cli_session.c  cli_vt100.h
shell/include/: cli.h  cli_config.h  cli_fmt.h  cli_instance.h
shell/test/: host_glue.c  host_glue.h  host_sections.ld  run_host_tests.sh  test_core.c  test_frame_pipeline.c  test_integration.c  test_output.c  test_parse.c
src/: app_exec_profile.c  app_shell.c  app_thread_metric.c  app_threadx.c  bsp.c  fault.c  iwdg.c  log.c  main.c  stm32f7xx_it.c
svc/: frame.h  frame_pipeline.c  frame_pipeline.h  log.c  timebase.c  timebase.h  ymodem.c  ymodem.h
ui/: guix_camera_ui.c  guix_camera_ui.h
